--- a/Old saved stuff/rootimeline8.html
+++ b/Old saved stuff/rootimeline8.html
@@ -6646,7 +6646,7 @@
 						<span class="A-audiobook">00,000,000~</span>
 					</span> Local Dateline) </span>
 				<span class="A-tv">
-					<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; City of Death: The last of the Jagaroth perish in an explosion
+					<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; City of Death: The last of the  perish in an explosion
 					that starts life on Sol III.</span>
 			</p>
 			<p class="A-audiobook">~450,000,000 BC&nbsp;&nbsp;&nbsp; The Beginning: The Doctor, Susan, and Stoyn witness the Archaeons altering evolution
