--- a/rooappendix.html
+++ b/rooappendix.html
@@ -1560,15 +1560,13 @@ inaugurated. </span>
 			<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
 			<h2>The NOUN of Rassilon List</h2>
 			<ul>
-				<li>
-					<span class="A-audiobook">Rassilon’s Cipher</span>
-				</li>
+				<li class="A-licensed">
+					Rassilon Cubes (for imprisoning people)</li><li><span class="A-audiobook">Rassilon Imprimature</span></li><li><span class="A-audiobook"></span><span class="A-audiobook">Rassilon's Blood</span></li><li><span class="A-audiobook">Rassilon’s Cipher</span></li><li><span class="A-audiobook">Rassilon's Death</span></li><li><span class="A-audiobook">Rassilon’s Garden<br></span></li><li><span class="A-audiobook">Rassilon's Ghost<br></span></li><li><span class="A-audiobook">Rassilon's Lament<br></span></li>
 				<li>
 					<span class="A-audiobook">Rassilon's Red Wine</span>
 				</li>
 				<li>
-					<span class="A-audiobook">Rassilon's Reformation</span>
-				</li>
+					<span class="A-audiobook">Rassilon's Reformation</span></li><li><span class="A-licensed">Rassilon's Roulette</span><br></li><li><span class="A-audiobook"><span class="A-tv">Rassilon's Star (aka</span> Qqaba, <span class="A-tv">the Eye of Harmony)</span></span></li><li><span class="A-audiobook">Rassilon's Throne (kept in the President's office)</span></li><li><span class="A-licensed">Rassilonian Timefly (aka Temporanius Clepcydras, time-sensitive insects)</span><br></li>
 				<li>
 					<span class="A-notbbc">The Bastards of Rassilon</span>
 				</li>
@@ -1584,8 +1582,8 @@ inaugurated. </span>
 				<li>
 					<span class="A-tv">The Coronet of Rassilon</span>
 				</li>
-				<li>
-					<span class="A-audiobook">The Equation of Rassilon (which allows travel in a time corridor)</span>
+				<li class="A-licensed">
+					The Death Shield of Rassilon</li><li><span class="A-audiobook">The Equation of Rassilon (which allows travel in a time corridor)</span>
 				</li>
 				<li>
 					<span class="A-audiobook">The Foxtrot of Rassilon</span>
@@ -1610,17 +1608,15 @@ inaugurated. </span>
 					<span class="A-tv">The Harp of Rassilon</span>
 				</li>
 				<li>
-					<span class="A-audiobook">The Horns of Rassilon (aka the Sign of Rassilon)</span>
-				</li>
+					<span class="A-audiobook">The Horns of Rassilon (aka the Sign of Rassilon)</span></li><li><span class="A-audiobook">The House of Rassilon <br></span></li>
 				<li>
 					<span class="A-tv">The Key of Rassilon</span>
 				</li>
 				<li>
-					<span class="A-tv">The Legacy of Rassilon (Regeneration)</span>
+					<span class="A-tv">The Legacy of Rassilon (aka Regeneration)</span>
 				</li>
 				<li>
-					<span class="A-audiobook">The Loom of Rassilon's Mouse</span>
-				</li>
+					<span class="A-audiobook">The Loom of Rassilon's Mouse</span></li><li><span class="A-audiobook">The Muses of Rassilon (a book of poetry)<br></span></li><li><span class="A-licensed">The Order of the Ancient Deeds of Rassilon</span><br></li>
 				<li>
 					<span class="A-audiobook">The Pact of Rassilon (aka the Treaty of Rassilon)</span>
 				</li>
@@ -1648,8 +1644,7 @@ inaugurated. </span>
 				</li>
 				
 				<li>
-					<span class="A-licensed">The Scrolls of Rassilon</span>
-				</li>
+					<span class="A-licensed">The Scrolls of Rassilon</span></li><li><span class="A-licensed"><span class="A-tv">The Seal of Rassilon<span class="A-audiobook"> </span></span><span class="A-audiobook">(aka the Omniscate)</span><br></span></li>
 				<li>
 					<span class="A-audiobook">The Seven Strictures of Rassilon</span>
 				</li>
@@ -1664,7 +1659,7 @@ inaugurated. </span>
 					<span class="A-tv">The Tomb of Rassilon (aka The Tower of Rassilon)</span>
 				</li>
 				<li>
-					<span class="A-audiobook">The Triumphs of Rassilon</span></li><li><span class="A-audiobook">The Urn of Rassilon<br></span></li>
+					<span class="A-audiobook">The Time Gun of Rassilon</span></li><li><span class="A-audiobook">The Triumphs of Rassilon</span></li><li><span class="A-audiobook">The Urn of Rassilon</span></li><li><span class="A-audiobook"><span class="A-tv">The Wisdom of Rassilon</span><br></span></li>
 			</ul>
 		</div>
 	</div>
