--- a/roogovernment.html
+++ b/roogovernment.html
@@ -568,7 +568,10 @@ graveyard.)<br><br></span></span></div><div class="section">
 					</figcaption>
 				</figure>
 				<span class="A-tv">The foundation of the Citadel is known as the vaults. These chambers date back to the Old Time. </span>
-				<span class="A-audiobook">Hidden access shafts in Panopticon lead to foundations and the vaults. </span>
+				<span class="A-audiobook"><span class="A-licensed"><span class="A-tv"></span>
+					</span>
+				</span>
+				<span class="A-tv">Traditionally, Time Lord bodies are interned in the Panopticon Vault 30 meters beneath the Panopticon.</span><span class="A-audiobook"> Hidden <span class="A-tv">access shafts in Panopticon lead to </span>foundations and<span class="A-tv"> the vaults.</span> </span>
 				<span class="A-tv"></span><span class="A-game">Life support for the Capitol is provided my huge recycling systems, such as</span>
 				<span class="A-audiobook">tachyonic recreation fabricators to create physical materials, and the Main Water Pumping Station in the vaults of the Citadel. </span><span class="A-audiobook">The Pumping Station is off limits to unauthorized personnel, even Time Lords.</span> <span class="A-tv">Within the Vaults can be found </span>
 				<span class="A-audiobook">the power couplings for the eastern part of the Capitol, and a <span class="A-tv"></span>fluctuating </span>
