--- a/roolifedeath.html
+++ b/roolifedeath.html
@@ -864,8 +864,10 @@ most, but some think he might be a Time Lord breaking the <span class="A-game">3
 								</span>
 							</li>
 							<li>
-								<span class="A-audiobook">The mythology and nursery stories of Gallifrey has stories of the Fendahl and the Fendahleen. </span>
-							</li>
+								<span class="A-audiobook">The mythology and nursery stories of Gallifrey has stories of the Fendahl and the Fendahleen.</span></li><li><span class="A-tv"><span class="A-audiobook"> The </span></span><span class="A-tv"><span class="A-audiobook">Higher Evolutionaries known as the </span></span><span class="A-tv"><span class="A-audiobook">Parallel Sect were
+dimensional pioneers who could cross dimensions at will. They had symbiotic nuclei and
+were considered to be a myth on many worlds including Gallifrey.&nbsp;They were said to have created a web of all the parallel
+timelines.</span></span></li>
 							<li>
 								<span class="A-audiobook">The Gallifreyans have stories about the Nameless City of the Archons that exist in the Great Desolation. The Archons
 									are the last of the Great Old Ones. These tales were found in the Necronomicon. Fairytales and legends include stories
@@ -888,8 +890,15 @@ Darkspace.&nbsp;From there  </span>they could reach all moments in time and spac
 										rules.</span></span></li></ul><ul>
 							<li>
 								<span class="A-audiobook">Malador is near mythical bogeyman in Time Lord history. He had had his conscience removed and created the Melkurs.
-									Malador was imprisoned by the Union of Traken. </span>
-							</li>
+									Malador was imprisoned by the Union of Traken.</span></li><li><span class="A-audiobook">The
+Watchmaker was the consort of one of Rassilon's generals. &nbsp;After
+the general was erased from history in a war with the Vondax, his
+consort&nbsp;traveled between dimensions trying to remove all temporal
+anomalies. In
+the early days of the Time Lords, she would appear, bringing death to
+many Gallifreyans who had been touched by paradox. She&nbsp;eventually
+became known as the mythological
+Watchmaker. </span></li>
 							<li>
 								<span class="A-audiobook">After a Civil War in the Capitol, the first Lady President of Gallifrey, Imperiatrix Pandora, was executed via D-Mat
 									dispersal. On Gallifrey legends will claim that the soul of the Imperiatrix lives on as a ghost in the Vaults.
@@ -1698,9 +1707,7 @@ user's current emotional state. </span>They keep track of popular music on a top
 									<span class="A-licensed">This form of Time Lord Dating began with the installation of the Eye of Harmony in the Citadel - which was the beginning
 										of the Rassilon Era. </span>
 									<span class="A-audiobook">For this reason the dates are given with the prefix RE for Rassilon Era. The Doctor would have been loomed in</span>
-									<span class="A-fanon"> 200</span>
-									<span class="A-audiobook">4716</span>
-									<span class="A-licensed">.44</span>
+									<span class="A-fanon"> 200</span><span class="A-audiobook">4716</span><span class="A-licensed">.44</span>
 									<span class="A-audiobook"> (The Gallifrey Chronicles claim the Doctor was loomed on 4756.7 RE But this is 40.5 years off from all other sources).
 									</span>
 									<span class="A-tv">For convenience sake Time Lords usually abbreviate Local Date Line to five digits (ie 5725.2 RE). </span>
@@ -1933,7 +1940,7 @@ Book of Foundations. Chapter Prydon. Verse six seven three. </em></span>
 							<span class="A-tv">(which might explain why the title "Time Lady" is considered old fashioned and rarely used). </span>The plural of
 							TARDIS is still still debated by Time Lords. </span>
 						<span class="A-tv">Many (if not all) Time Lord documents are printed on circular colored paper. Sometimes these are rolled up into scrolls.
-							Gallifreyan Morse (similar to Morse Code), is easy to translate,</span>
+							<span class="A-audiobook">It should be noted that using green ink to write was considered to be very manners. </span><br><br>Gallifreyan Morse (similar to Morse Code), is easy to translate,</span>
 						<span class="A-audiobook">Rassilon's Cipher is very difficult to decode and only a few Time Lords are trained to understand it.
 							<span class="A-tv">Rassilon's
 								<span class="A-fanon">Cipher</span> can be decoded using the algorithm imprinted in the atomic structure of an authentic seal or Rassilon.
