--- a/rootimeline4.html
+++ b/rootimeline4.html
@@ -415,10 +415,7 @@
 				<span class="A-fanon">
 					<span class="A-notbbc">(the same clutch that produced the Doctor, but probably after the Doctor / maybe before the Master?) </span>
 					<span class="A-audiobook">
-						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The </span>
-				</span>
-			</span>
-			<span class="A-audiobook">
+						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The</span></span></span><span class="A-audiobook">
 				Voodoo Priest of the House of Lungbarrow </span>
 			<span class="A-audiobook">
 				<span class="A-fanon">
@@ -488,22 +485,10 @@
 				</span>
 				<span class="A-audiobook">Spirals of microscopic data begin flowing into the Loom.&nbsp; </span>
 				<span class="A-audiobook">The Doctor's contact with the Loom of the House of Lungbarrow appears to have let some of the Other's biodata be reborn
-					as the Doctor.</span>
-				<span class="A-audiobook">&nbsp;&nbsp;</span>
-				<span class="A-audiobook">
-					<span class="A-infinity">
-						<span class="A-fanon">Possibly as a result of the Micen Island incident, the Chris Baker Doctor jumps looms and is</span>
+					as the Doctor.</span> <span class="A-audiobook"></span><span class="A-audiobook"><span class="A-infinity"><span class="A-fanon">Possibly as a result of the Micen Island incident, the Chris Baker Doctor jumps looms and is</span>
 					</span>
 				</span>
-				<span class="A-fanon"> woven into the biodata of Penelope and Ulysses's child.&nbsp;</span>
-				<span class="A-audiobook">
-					<span class="A-infinity"> </span>
-				</span>
-				<span class="A-infinity">
-					<span class="A-tv"></span>
-				</span>
-				<span class="A-alternate"></span>
-				<span class="A-infinity">Ulysses will arrange to have</span>
+				<span class="A-fanon"> woven into the biodata of Penelope and Ulysses's child.&nbsp;</span><span class="A-infinity"></span><span class="A-infinity">Ulysses will arrange to have</span>
 				<span class="A-infinity">
 					the Doctor "loomed" into the House of Lungbarrow.&nbsp;&nbsp;
 				</span>
@@ -562,22 +547,13 @@
 				</span>
 			</span>
 			<span class="A-infinity">
-				<span class="A-audiobook"> that states that a Time Lord of this generation will be central to Gallifrey's confrontation with many new enemies.
-				</span>
-			</span>
-			<span class="A-audiobook">&nbsp; The one who will lead his people out of the time of darkness and unite them against the great evil that will face
-				the universe.</span>
-			<span class="A-infinity">
-				<span class="A-audiobook">&nbsp; This Time Lord will find the lost Scrolls of Rassilon and lead Gallifrey from darkness.&nbsp; </span>
-				<span class="A-audiobook">Only the President and the Supreme Council know of this prophecy and they never talk of it to others.
-				</span>
-			</span>
-			<span class="A-audiobook">&nbsp;
-				<span class="A-licensed">The High Council does not know that the Doctor is the Other</span>
+				<span class="A-audiobook"> that states that a Time Lord of this generation will be central to Gallifrey's confrontation with many new enemies.</span></span><span class="A-audiobook"> The one who will lead his people out of the time of darkness and unite them against the great evil that will face
+				the universe.</span> <span class="A-infinity"><span class="A-audiobook">This Time Lord will find the lost Scrolls of Rassilon and lead Gallifrey from darkness.&nbsp; </span>
+				<span class="A-audiobook">Only the President and the Supreme Council know of this prophecy and they never talk of it to others.&nbsp;</span></span><span class="A-audiobook"><span class="A-licensed">The High Council does not know that the Doctor is the Other</span>
 				<span class="A-infinity">but the Chancellery Watch will learn of this and keep an eye on the Doctor because Rassilon left them special instructions
 					to kill the Doctor if he undertook certain actions.&nbsp;
 					<span class="A-licensed"> If the High Council was to learn that the Doctor was the Other they might hunt him down and execute him.
-						<br>
+						</span></span></span><span class="A-infinity"><span class="A-audiobook"><span class="A-fanon"></span></span></span><br><span class="A-audiobook"><span class="A-infinity"><span class="A-licensed"><br> <br>
 						<br class="A-licensed">
 					</span>
 				</span>
