--- a/rootimeline7.html
+++ b/rootimeline7.html
@@ -186,7 +186,10 @@
 			<br>
 			<div class="quote">
 				<span class="A-notbbc">“What do we fear, after thirty years of War?
-					<br>We fear that it was lost in the first nanosecond. We fear that we are fighting something unstoppable and ancient. We fear that we may become what we fight, <br>or that we have already done so.” </span>
+					<br>We
+fear that it was lost in the first nanosecond. We fear that we are
+fighting something unstoppable and ancient. We fear that we may become
+what we fight, <br>or that we have already done so.” </span>
 			</div>
 			<div class="speaker">
 				<span class="A-notbbc"> - House Strategist Entarodora</span>
@@ -2624,7 +2627,17 @@ Project.&nbsp;&nbsp;&nbsp;&nbsp; </span>
 		<span class="A-notbbc">
 			<span class="A-game">stabilized quantum dimensional tunnels require tremendous resources to set up and maintain. </span>
 		</span>
-		<span class="A-notbbc">This area is considered out of bounds for the War in Heaven and both the Enemy and the Time Lords attempt to recapture him.&nbsp; House Mirraflex sends one of the Cwej to neutralize the 13 transport devices but he fails.&nbsp; With the help of Faction Paradox all the Universes where Rome never fell are "walled off" and become inaccessible (even to the Time Lords).&nbsp; Marcus Americanius Scriptor finishes collecting the devices (and related technology) from the worlds where Hitler won WWII and then leaves the alternate universe for the Classic Timeline.&nbsp; He writes his memoirs and titles them Warlords of Utopia. </span>
+		<span class="A-notbbc">This
+area is considered out of bounds for the War in Heaven and both the
+Enemy and the Time Lords attempt to recapture him.&nbsp; House
+Mirraflex sends one of the Cwej to neutralize the 13 transport devices
+but he fails.&nbsp; With the help of Faction Paradox all the Universes
+where Rome never fell are "walled off" and become inaccessible (even to
+the Time Lords).&nbsp; Marcus Americanius Scriptor finishes collecting
+the devices (and related technology) from the worlds where Hitler won
+WWII and then leaves the alternate universe for the Classic
+Timeline.&nbsp; He writes his memoirs and titles them Warlords of
+Utopia. </span>
 	</p>
 	<p>
 		<span class="A-notbbc">
@@ -2663,7 +2676,26 @@ Project.&nbsp;&nbsp;&nbsp;&nbsp; </span>
 		<span class="A-notbbc"> the Doctor’s TARDIS</span>
 		<span class="A-notbbc">) was unique because they were a hybrids. &nbsp;She is&nbsp;only half TARDIS on her Mother’s side. </span>
 		<span class="A-fanon">As part of the 101-Project </span>
-		<span class="A-notbbc">Lolita had the Master make special changes to her heart so that she can fulfill her destiny to evolve into a humanoid form. The changes were part of Mother (probably the Matrix)’s plan. Lolita is more of a process then an actual life form. She is a hostile new version of history with biomass and technology attached and, as such, its impossible for her to die. &nbsp;Lolita takes the Time Lord prejudice against lesser species to an extreme and sees herself as the smartest and most complex being in the Great Houses. &nbsp;She begins her career as an Academician for Game Logic but will quickly rise through the ranks. &nbsp;Lolita is at least partially responsible for getting the Time Lords into the Time War, and sees the War as useful for convincing the Time Lords that they are physical beings and vulnerable.&nbsp; She really doesn’t care who the enemy is. &nbsp;Lolita is planning to reveal her abilities to the Time Lords when circumstances are such that they can't stop her. It is at this point she plans to take control and fulfill Mother’s plans to create a new form of history. The War King sees Lolita as the future and doesn’t believe he has the power to stop Lolita – only to slow her down. By this point Lolita is no longer linked with the Master.</span>
+		<span class="A-notbbc">Lolita
+had the Master make special changes to her heart so that she can
+fulfill her destiny to evolve into a humanoid form. The changes were
+part of Mother (probably the Matrix)’s plan. Lolita is more of a
+process then an actual life form. She is a hostile new version of
+history with biomass and technology attached and, as such, its
+impossible for her to die. &nbsp;Lolita takes the Time Lord prejudice
+against lesser species to an extreme and sees herself as the smartest
+and most complex being in the Great Houses. &nbsp;She begins her career
+as an Academician for Game Logic but will quickly rise through the
+ranks. &nbsp;Lolita is at least partially responsible for getting the
+Time Lords into the Time War, and sees the War as useful for convincing
+the Time Lords that they are physical beings and vulnerable.&nbsp; She
+really doesn’t care who the enemy is. &nbsp;Lolita is planning to
+reveal her abilities to the Time Lords when circumstances are such that
+they can't stop her. It is at this point she plans to take control and
+fulfill Mother’s plans to create a new form of history. The War King
+sees Lolita as the future and doesn’t believe he has the power to stop
+Lolita – only to slow her down. By this point Lolita is no longer
+linked with the Master.</span>
 	</p>
 	<p>
 		<span class="A-notbbc">1198 </span>
@@ -2736,8 +2768,22 @@ to escape the end of the Universe.&nbsp; They open a gate to another <span class
 		<span class="A-audiobook">
 			<br>
 		</span>
-		<span class="A-notbbc">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 
-		Of the City of the Saved: Compassion's first son, Antipathy, begins destroying and re-creating parts of it.&nbsp; The parts he creates are undetectable by Compassion and thus capable of killing humans.&nbsp; Every human that dies is recreated by Antipathy.&nbsp; The Time Lord Handramit visits the City of the Saved but is eventually thrown out when it is learned that he is Councilor Alisheer St. Marx's Father.&nbsp; Antipathy begins raising an army of Manfolk to go to spread his pain and misery throughout the City.&nbsp; Godfather Avatar of the Faction Paradox's Rump Parliament destroys Antipathy with an Annihilation Bomb.&nbsp; Part of the City of the Saved undergoes a Civil War and the Universal Machine sends the last of the colonists to the Next Universe Colony, and the Downtime Gate is permanently sealed.&nbsp; The Next Universe Colony might be named Home, and it is predicted to last several quadrillennia.</span>
+		<span class="A-notbbc">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; Of the City of the
+Saved: Compassion's first son, Antipathy, begins destroying and
+re-creating parts of it.&nbsp; The parts he creates are undetectable by
+Compassion and thus capable of killing humans.&nbsp; Every human that
+dies is recreated by Antipathy.&nbsp; The Time Lord Handramit visits
+the City of the Saved but is eventually thrown out when it is learned
+that he is Councilor Alisheer St. Marx's Father.&nbsp; Antipathy begins
+raising an army of Manfolk to go to spread his pain and misery
+throughout the City.&nbsp; Godfather Avatar of the Faction Paradox's
+Rump Parliament destroys Antipathy with an Annihilation Bomb.&nbsp;
+Part of the City of the Saved undergoes a Civil War and the Universal
+Machine sends the last of the colonists to the Next Universe Colony,
+and the Downtime Gate is permanently sealed.&nbsp; The Next Universe
+Colony might be named Home, and it is predicted to last several
+quadrillennia.</span>
 	</p>
 	<p>
 		<span class="A-notbbc">1151-1201?
@@ -2767,7 +2813,13 @@ to escape the end of the Universe.&nbsp; They open a gate to another <span class
 	<p>
 		<span class="A-notbbc">1201 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (50 years after the War begins /</span>
 		<span class="A-audiobook"> several centuries after Monster of Peladon / 3790 AD)
-			<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Interference: The Remote encounters the Doctor (age ~737) on the planet Dust and infect him with a "virus" that will subvert him to the Faction Paradox's will, by his eighth incarnation. I.M. Foreman will become Foreman's World. Father Kreiner is flung into the Space-Time Vortex and trapped in I.M. Foreman's Bottle Universe. </span>
+			<br>&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; Interference: The Remote encounters the Doctor (age
+~737) on the planet Dust and infect him with a "virus" that will
+subvert him to the Faction Paradox's will, by his eighth incarnation.
+I.M. Foreman will become Foreman's World. Father Kreiner is flung into
+the Space-Time Vortex and trapped in I.M. Foreman's Bottle Universe. </span>
 		<br>
 	</p>
 	<p>
