--- a/rootimeline8.html
+++ b/rootimeline8.html
@@ -6766,21 +6766,26 @@ Earth as if forms.&nbsp; <span class="A-fanon">
 					<span class="A-fanon">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; The Earth's gravity control unit might be buried beneath the Indian ocean's gravity
 						distortion (this is a real distortion that cause a deformation in the ocean)</span>
 					<span class="A-fanon">. &nbsp;Or it might be located at Stonehenge (where the Monk built a monument) as it was the first place Tannis seized
-						when he attacked Earth.&nbsp;</span>&nbsp;
-					<br>
+						when he attacked Earth.&nbsp;</span></span></p><p><span class="A-licensed">450,000,000 BC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (right before Scaroth dies and life begins on the Earth)</span><br class="A-licensed"><span class="A-licensed">&nbsp;&nbsp;&nbsp;
+The Kingdom of the Blind: The Jagaroth used the Dahensa as pilots in
+their experiments to create chronon particles.&nbsp; The Jagaroth High
+Command hoped to project images of their fleets forward in time to fool
+their enemies, but the Dahensa sabotaged their systems destroying all
+but one of their ships.&nbsp; That ship makes its way to the Earth for
+repairs. This story becomes a Time Lord Legend.&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span class="A-audiobook"><span class="A-fanon"></span><br>
 					<span class="A-tv"></span>
 				</span>
 			</p>
 			<p>
 				<span class="A-audiobook">
-					<span class="A-tv">4
-						<span class="A-audiobook">5</span>0,000,000 BC&nbsp;</span>&nbsp;&nbsp; &nbsp; (3,1
+					<span class="A-tv">4<span class="A-audiobook">5</span>0,000,000 BC&nbsp;</span>&nbsp;&nbsp; &nbsp; (3,1
 					<span class="A-fanon">
 						<span class="A-audiobook">00,000,000~</span>
 					</span> Local Dateline) </span>
 				<span class="A-tv">
 					<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; City of Death: The last of the Jagaroth perish in an explosion
-					that starts life on Sol III.</span>
+					that starts life on Sol III (the Earth).</span>
 			</p>
 			<p class="A-audiobook">~450,000,000 BC&nbsp;&nbsp;&nbsp; The Beginning: The Doctor, Susan, and Stoyn witness the Archaeons altering evolution
 				on the Earth as part of their experiment.&nbsp; But the Archaeons are forced to abandon experiment when Stoyn accidentally
