--- a/rootimelord.html
+++ b/rootimelord.html
@@ -1064,7 +1064,7 @@ final preparations right before their graduation ceremony.&nbsp;</span>Graduatio
 				<span class="A-notbbc">as academicians and
 					<span class="A-tv">observers </span></span><span class="A-audiobook"><span class="A-licensed">of events throughout space and time</span></span><span class="A-notbbc"><span class="A-tv"> </span>
 					<span class="A-audiobook">who are devoted to a life of service to History.
-						<span class="A-licensed">They are also sworn to protect Gallifrey at any cost.<br> </span>
+						<span class="A-licensed">They are also sworn to protect Gallifrey at any cost.<br><br> </span>
 					</span>
 				</span>
 			</div>
@@ -1077,7 +1077,7 @@ final preparations right before their graduation ceremony.&nbsp;</span>Graduatio
 				<span class="A-audiobook">This means that, unlike non-time travelers, they truly have free will. </span>
 				<span class="A-game">But they can only exercise that free will by deliberately choosing to try to change history. </span>
 				<span class="A-notbbc">This is why the Time Lords view themselves as history incarnate. </span>
-				<span class="A-game"> All of their interactions and interventions are, in the end, part of the way the Web of Time was always shaped.<br> </span>
+				<span class="A-game"> All of their interactions and interventions are, in the end, part of the way the Web of Time was always shaped.<br><br> </span>
 			</div>
 			<div class="section">
 				<span class="A-notbbc">The Time Lords are so intertwined with the Universe that they are a part of the Laws of time and space. Because of this,
@@ -1092,7 +1092,7 @@ final preparations right before their graduation ceremony.&nbsp;</span>Graduatio
 					to themselves. And they tend to over react to such things, usually abandoning and 'running' from such things. The Doctor
 					claims that after living in the Capitol for a few thousand years a Time Lord completely loses their personality. </span>
 				<span class="A-notbbc">The very idea of Gallifrey having a history is viewed as vulgar and primitive by the Time Lords. </span>
-				<span class="A-tv">And Old Time Lords often get their tenses muddled.<br> </span>
+				<span class="A-tv">And Old Time Lords often get their tenses muddled.<br><br> </span>
 			</div>
 			<div class="section">
 				<span class="A-tv">Gallifrey is governed by an oligarchy with the Time Lords of various ranks </span>
@@ -1108,7 +1108,7 @@ final preparations right before their graduation ceremony.&nbsp;</span>Graduatio
 				<span class="A-tv">a total of 1,000 Time Lords. All are graduates of the Time Academy. </span>
 				<span class="A-infinity">Of that 1,000 only about 12 are female. </span>
 				<span class="A-tv">These 1000 Lords have supreme power over the
-					<span class="A-audiobook">millions of </span>Gallifreyans on the planet.<br> </span>
+					<span class="A-audiobook">millions of </span>Gallifreyans on the planet.<br><br> </span>
 			</div>
 			<div class="section">
 				<span class="A-game">Some Time Lords get jobs in Observation Services. It is there responsibility to study the external universe for damaged
@@ -1119,14 +1119,14 @@ final preparations right before their graduation ceremony.&nbsp;</span>Graduatio
 				<span class="A-game"> and those who have truly mastered a field are treated almost as gods by other Gallifreyans. Other, more introverted,
 					Time Lords prefer the company of their symbiotically bonded TARDIS and shun most other social interaction. Many of these
 					shut-ins pursue a career in TARDIS engineering. Over the thousands of years of their lives most Time Lords will fight
-					off boredom by changing the academic focus of their research several times.<br> </span>
+					off boredom by changing the academic focus of their research several times.<br><br> </span>
 			</div>
 			<div class="section">
 				<span class="A-tv">The ceremonial robes, collars, and makeup of the Time Lords are worn only for special occasions. </span>
 				<span class="A-licensed">Time Lords are to always act with dignity, dress appropriately. </span>
 				<span class="A-notbbc">Time Lords are always on time, for to be late or early for any event is unthinkable. </span>
 				<span class="A-licensed">One of the symbols of their mastery of time is the pocket watch,
-					<span class="A-game">another is an old fashion key, which symbolizes their role as gate-keepers of the secrets of the Universe.<br></span>
+					<span class="A-game">another is an old fashion key, which symbolizes their role as gate-keepers of the secrets of the Universe.<br><br></span>
 				</span>
 			</div>
 			<div class="section">
@@ -1148,7 +1148,7 @@ final preparations right before their graduation ceremony.&nbsp;</span>Graduatio
 				</span>
 			</div>
 			<div class="section">
-				<span class="A-alternate">Time Lords
+				<span class="A-alternate"><br>Time Lords
 					<span class="A-fanon">who travel the cosmos regularly </span>are encouraged to take a companion from among the lesser species to serve as
 					something of a moral conscience. But if a Time Lord is to interact with lesser species it is recommended they form a
 					series of shallow short term relationships to avoid stronger attachments. </span>
@@ -1167,7 +1167,7 @@ from one time stream to another. The fields of a Time Lord will protect
 their clothes (and the stuff in their pockets) from temporal shifts.
 But this chronon energy also empowers a Time Lords regenerations. </span>
 				<span class="A-fanon">For this reason, </span>
-				<span class="A-tv">they cease being Time Lords when they have used up all 12 of their regenerations. When elderly Time Lords
+				<span class="A-tv">they cease being Time Lords when they have used up all 12 of their regenerations. <br><br>When elderly Time Lords
 					<span class="A-audiobook">
 					who have done great deeds</span> come to their retirement, after their 12 regeneration, they are offered (by the High
 					Council) the opportunity to retire to somewhere in Normal Space.
@@ -1179,8 +1179,11 @@ But this chronon energy also empowers a Time Lords regenerations. </span>
 				<span class="A-tv">Time Lords are expected to face death with dignity.</span>
 				<span class="A-audiobook">Time Lord corpses are telepathically active due to residual psychic power. </span>
 				<span class="A-audiobook">If the Artron Energy released by the death of a Time Lord was to be converted into kinetic energy, it would be enough
-					to drag Earth's moon out of orbit and crash into the planet.
-					<span class="A-licensed">For this reason Gallifreyans are always very careful about disposing of the body of a Time Lord. It is said, that
+					to drag Earth's moon out of orbit and crash into the planet. <span class="A-tv">&nbsp;Even
+if a Time Lord has had both hearts and all three brain stems stopped
+and been given a cellular shockwave to abort their regeneration there
+is still a remote possibility that life could be renewed in the body
+sometime in the next thousand years.</span> <span class="A-licensed">For these reason Gallifreyans are always very careful about disposing of the body of a Time Lord. It is said, that
 						<span class="A-tv">when a Time Lord dies he leaves a scar
 							<span class="A-audiobook">of biodata thread</span> across all of space and time. </span>
 					</span>
