--- a/rooweb.html
+++ b/rooweb.html
@@ -773,16 +773,14 @@ to leave
 Gallifrey. If a TARDIS has been de-registered then the transduction
 barriers might not be able to stop its departure from Gallifrey. When a
 Timeship passes through the Transduction Barriers the effect is visible
-from Gallifrey’s surface.</span>
-				<span class="A-audiobook">
-					<span class="A-tv"> If
+from Gallifrey’s surface.</span>&nbsp;<span class="A-audiobook"><span class="A-tv">Amber Alerts are invoked when an unauthorized TT capsule is approaching Gallifrey. If
 						<span class="A-fanon">more</span> Transduction Barriers are lowered into place no TARDIS will be able to arrive on Gallifrey. </span>The
 exception would be and any TARDIS carrying the Lord President, whose
 Rassilon Imprimatur and Presidential Code allow him to pass through the
 transduction barriers at will. It is possible to configure the the
 controls to trap a TARDIS inside them barriers. A TARDIS in such
 a position will find it will require all of its power just to transmit
-a short range distress call to Gallifrey. <br><br></span><span class="A-tv">If Gallifrey was every to be attacked the Transduction Barrier would be raised to Factor 5. </span>
+a short range distress call to Gallifrey. <br><br></span><span class="A-tv">If Gallifrey was every to be attacked a Red Alert would be declared and the Transduction Barrier would be raised to Factor 5. </span>
 				<span class="A-fanon">At this level</span>
 				<span class="A-audiobook"> they would block all weapons fire or kamikaze runs. </span>
 				<span class="A-game">Any ship that tried would find itself diverted around the planet in a manner similar to gravitational lensing. </span>
@@ -798,7 +796,7 @@ suddenly appearing less than a light-year away.</span><span class="A-audiobook">
 			<div class="section">
 				<span class="A-audiobook">The
 strength of the Transduction Barriers can be reduced by the effect of
-temporal storms or nearby time rift activity.&nbsp; The Time Lords also
+temporal storms or nearby time rift activity. <span class="A-tv">Charging the transduction barriers will isolate the Matrix from all users.&nbsp;</span>The Time Lords also
 use Transduction Barriers in other locations </span>
 				<span class="A-fanon">such as TARDIS Neural Construction Docks to prevent the Capsules from escaping. </span>
 				<span class="A-audiobook">A localized transduction barriers can be used to shield a Time Lord from the Matrix.<br><br> </span>
@@ -864,7 +862,7 @@ Time Lords <span class="A-audiobook">and Academy Students </span>are guaranteed 
 				</span>
 				<span class="A-audiobook">The Matrix Safeguards automatically wipe any irrelevant info that a user stumbles across. Every time someone accesses
 					the Matrix they leave a unique genetic artron transponder imprint. </span>
-				<span class="A-tv">The President also has the authority to isolate Master Control of the Matrix (ie prevent anyone from accessing it) by
+				<span class="A-tv">The President also has the authority to isolate Master Control of the Matrix (which prevents anyone from accessing it) by
 					charging the transduction field.<br><br> </span>
 			</div>
 			<div class="section A-tv">
