--- a/roogallifrey.html
+++ b/roogallifrey.html
@@ -257,14 +257,14 @@ galactic 0 center. The Nebula of Cyclops is near enough to Gallifrey </span><spa
 		</div>
 		<div class="article" id="constellation" style="padding-top: 130px; margin-top: -130px;">
 			<figure>
-				<img src="images/Kasterborus.jpeg" alt="Constellation of Kasterborous">
+				<img src="images/kasterborus.jpeg" alt="Constellation of Kasterborous">
 				<img src="images/kasterborous2.jpeg" alt="Seven Systems">
 				<figcaption>
 					<span class="A-licensed">The Minyan Constellation of Kasterborous from two different angles in the Kasterborous Sector. </span>
 					<br>
 					<span class="A-audiobook">The center most star is Gallifrey's sun.</span>
 					<br>
-					<span class="A-tv">(seen on the back of the 3rd/4th/8th Doctor's TARDIS key)</span>
+					<span class="A-tv">(This constellation is seen on the back of the 3rd/4th/8th Doctor's TARDIS key)</span>
 				</figcaption>
 			</figure>
 			<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
@@ -314,9 +314,7 @@ was the largest contributer to the New Astrology and personally wrote <span styl
 							spaceships).&nbsp;</span></span></span><span class="A-audiobook">Asomidium
 can be found in an asteroid belt in the Kasterborous Sector.&nbsp;This
 mineral was used to enhance Time Lord telepathy. <br><br>Gallifrey's Dominions include several planets that would be valuable if mined
-					<span class="A-fanon"> (Could they contain Taranium?) </span>
-				</span>
-				<span class="A-audiobook">The center of most of the galaxy’s trade routes pass relatively near Gallifrey. This is where most of the more
+					<span class="A-fanon"> (Could they contain Taranium?). <span class="A-licensed">Trakkiney is a hot dry dusty world that was one of the Time Lord’s first off-world colonies</span> (after the collapse of the Gallifreyan Empire).&nbsp;</span></span><span class="A-audiobook">The center of most of the galaxy’s trade routes pass relatively near Gallifrey. This is where most of the more
 					powerful civilizations in the cosmos can be found. </span>
 				<span class="A-tv">Time Lord traffic control monitor any vessels that pass near Gallifrey's space-time location. </span>
 				<span class="A-tv">Space vessel must request permission to pass through Gallifrey's space-time. </span>
@@ -415,11 +413,7 @@ to its rotational axis]. These twin suns </span>
 			<div class="section">
 				<span class="A-tv">Karn
 is probably the second planet in the system, and is only a few billion
-miles (could be SI or European "billion") from Gallifrey. <span class="A-alternate">Karn has one moon. <span class="A-licensed">The planet is divided up into 7 provinces, one of which is called Seazalon.</span> &nbsp;The ruins of the Citadel of Karn, once the center of the mighty Gallifreyan Empire, can be found there. </span>
-					<span class="A-audiobook">In the modern era, Karn appears to have population of no more then a few million, <span class="A-alternate">who have mostly abandoned science.&nbsp;</span></span><span class="A-game"><span class="A-licensed">In ancient times the world might have been known as Winter. </span>&nbsp;The planet Sarn might later become known as Karn in the future.</span>
-					Parts of Karn are covered in hexagonal crystalline rock formation. </span> 
-					<span class="A-fanon">If Gallifrey had similarly rock formations it could explain the importance of hexagons in their mythology. </span>
-					<span class="A-audiobook">Most parts of the planet experience almost continual electrical storms and rain fall. &nbsp;</span><span class="A-alternate">After the fall of civilization on Karn the Giant Land Crab evolved.</span>
+miles (could be SI or European "billion") from Gallifrey. <span class="A-alternate">Karn has one moon. <span class="A-licensed">The planet is divided up into 7 provinces, one of which is called Seazalon.</span> The ruins of the Citadel of Karn, once the center of the mighty Gallifreyan Empire, can be found there. </span><span class="A-audiobook">In the modern era, Karn appears to have population of no more then a few million, </span><span class="A-alternate">who have mostly abandoned science. </span><span class="A-game"><span class="A-licensed">In ancient times the world might have been known as Winter. </span>The planet Sarn might later become known as Karn in the future. </span>Parts of Karn are covered in hexagonal crystalline rock formation.  </span><span class="A-fanon">If Gallifrey had similarly rock formations it could explain the importance of hexagons in their mythology. </span><span class="A-audiobook">Most parts of the planet experience almost continual electrical storms and rain fall. </span><span class="A-alternate">After the fall of civilization on Karn the Giant Land Crab evolved.</span>
 			</div>
 			<div class="article A-audiobook" id="planet" style="padding-top: 130px; margin-top: -130px;">
 				<figure>
@@ -430,26 +424,8 @@ miles (could be SI or European "billion") from Gallifrey. <span class="A-alterna
 				<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
 				<h2>THE WORLD OF GALLIFREY</h2>
 				<div class="section">
-					<span class="A-tv">Gallifrey is the
-						<span class="A-game">third</span> planet from the primary star. </span>
-					<span class="A-tv">
-						<span class="A-audiobook"></span>
-					</span>
-					<span class="A-tv">Gallifrey is known as the Shining World
-						<span class="A-licensed">(or Jewel)</span> of the Seven Systems. </span>
-					<span class="A-audiobook">
-						<span class="A-tv">
-							<span class="A-fanon">Depending on the season</span>
-							<span class="A-audiobook">Gallifrey appears from space, to be a brown and green snow capped planet. </span>Gallifrey's diameter is about 3 times
-							that of Sol III (Earth).</span>
-					</span>
-					<span class="A-infinity">
-						<span class="A-tv"> Despite this, the </span>
-					</span>
-					<span class="A-infinity">gravity, orbital radius,
-						<span class="A-tv"> pressure, temperature, and oxygen levels are the same as Earth. </span>
-					</span>
-					<span class="A-tv">As Gallifrey appears to have the exact same orbit as Alzarius </span>
+					<span class="A-tv">Gallifrey is the <span class="A-game">third</span> planet from the primary star. </span>
+					<span class="A-tv">Gallifrey is known as the Shining World <span class="A-licensed">(or Jewel)</span> of the Seven Systems. </span><span class="A-fanon">Depending on the season </span><span class="A-audiobook">Gallifrey appears from space, to be a brown and green snow capped planet. </span><span class="A-tv">Gallifrey's diameter is about 3 times that of Sol III (Earth).</span><span class="A-tv"> Despite this, the </span><span class="A-infinity">gravity, orbital radius,</span><span class="A-tv"> pressure, temperature, and oxygen levels are the same as Earth. As Gallifrey appears to have the exact same orbit as Alzarius </span>
 					<span class="A-fanon">it might be drawn farther from the sun every 50 years by other planets in the system.</span>
 				</div>
 				<figure>
@@ -463,8 +439,7 @@ of the moons is called Pazithi Gallifreya which orbits Gallifrey every
 27 days. In ancient times it was known as the Virgin Moon Goddess.
 Depending on conditions </span><span class="A-tv">the moon appears to be copper colored and shines even in the sunlight. </span>
 					<span class="A-licensed">This moon has a large supply of Taranium </span>
-					<span class="A-audiobook"> which was mined during the Dark Time. </span>
-					<span class="A-audiobook">
+					<span class="A-audiobook"> which was mined during the Dark Time. 
 						<span class="A-tv">
 							<span class="A-audiobook">The
 								<span class="A-licensed">other</span> moon appears to be</span>
